<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.programlancer.primo.MainActivity">

    <TextView
        android:id="@+id/textViewLabelMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:labelFor="@+id/editTextMessage"
        tools:text="@string/labelMessage" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewNeighbors"
        android:layout_below="@+id/textViewLabelMessage"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textViewNeighbors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="0"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewLabelReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNeighbors"
        android:labelFor="@+id/textViewReceived"
        tools:text="@string/labelReceived" />

    <TextView
        android:id="@+id/textViewReceived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLeft"
        android:layout_below="@+id/textViewLabelReceived"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClickLeftButton"
        android:visibility="visible"
        android:text="@string/buttonLeftLabel" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRightButton"
        android:visibility="visible"
        tools:alpha="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/buttonRightLabel" />

</RelativeLayout>
